feat: add two-level course selection client